<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:hint="@string/name"
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingTop="16dp"
            android:layout_marginRight="16dp"
            android:inputType="textCapWords"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/toppings"
            android:textAllCaps="true"

      />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whipped"
            android:textSize="16sp"
            android:paddingLeft="24dp"
            android:layout_marginLeft="16dp"
            android:id="@+id/whipped_cream_checkbox" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:textSize="16sp"
            android:paddingLeft="24dp"
            android:layout_marginLeft="16dp"
            android:id="@+id/chocolate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:text="@string/quantity"
            android:textAllCaps="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:text="-"
                android:onClick="decrement"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="2"
                android:id="@+id/quantity_text_view"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="#000000"
                android:textSize="16sp"
                />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:text="+"
                android:onClick="increment"
                />

        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/order"
            android:onClick="submitOrder"
            android:textAllCaps="true"

            />
    </LinearLayout>
</ScrollView>